--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,11 @@ header {
     justify-content: center;
     align-items: center;
     font-size: 12px;
+    transition: 0.3s;
+}
+.cart_icon:hover .cart_count {
+    background-color: red;
+    color: white;
 }
 
 
@@ -135,6 +140,10 @@ h1 {
     background-color: #3498db;
     padding: 0.5rem 1rem;
     border-radius: 4px;
+    transition: 0.3s;
+}
+.back-button:hover {
+    background-color: #2980b9;
 }
 
 .catalog-filters {
@@ -179,6 +188,8 @@ h1 {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .product-image img {
@@ -189,6 +200,10 @@ h1 {
 
 .product-info {
     padding: 1rem;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .product-info h3 {
@@ -226,6 +241,10 @@ h1 {
     padding: 0.5rem 0.8rem;
     border-radius: 4px;
     cursor: pointer;
+    transition: 0.3s;
+}
+.add-to-cart:hover{
+    background-color: #2980b9;
 }
 
 /* Стили для подвала сайта */
@@ -267,25 +286,7 @@ footer {
     display: flex;
     gap: 1rem;
 }
-
-
-@media (max-width: 768px) {
-    .header__content {
-        flex-direction: column;
-        gap: 1rem;
-    }
-    
-    .header_list {
-        flex-direction: column;
-        align-items: center;
-    }
-    
-    .catalog-header {
-        flex-direction: column;
-        gap: 1rem;
-    }
-    
-    .catalog-grid {
-        grid-template-columns: 1fr;
-    }
-} 
+.social-links img {
+    width: 32px;
+    height: 32px;
+}
