--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,10 @@ header {
     background-color: red;
     color: white;
 }
-
-
+.header_link.active .cart_count {
+    background-color: red;
+    color: white;
+}
 main {
     max-width: 1200px;
     margin: 80px auto 20px;
