--- a/css/style.css
+++ b/css/style.css
@@ -737,7 +737,8 @@ footer {
 
 .category-image img {
     width: 100%;
-    height: 100%;
+    height: auto;
+    display: block;
     object-fit: cover;
     transition: transform 0.5s;
 }
