--- a/css/style.css
+++ b/css/style.css
@@ -737,8 +737,7 @@ footer {
 
 .category-image img {
     width: 100%;
-    height: auto;
-    display: block;
+    height: 100%;
     object-fit: cover;
     transition: transform 0.5s;
 }
