--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -9,9 +10,6 @@ body {
     line-height: 1.6;
     color: #333;
     background-color: #f5f5f5;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
 }
 
 a {
@@ -99,7 +97,6 @@ main {
     max-width: 1200px;
     margin: 80px auto 20px;
     padding: 0 20px;
-    flex: 1;
 }
 
 section {
@@ -255,7 +252,7 @@ footer {
     background-color: #2c3e50;
     color: #ecf0f1;
     padding: 2rem 0;
-    margin-top: auto;
+    margin-top: 2rem;
 }
 
 .footer_content {
